<?xml version="1.0" encoding="utf-8" standalone="no"?>
	<!--
		this file is built by arct v:froyo_2011-03-23, Mon Dec 29 15:44:17 CST 2014
	-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--
         String displayed as the alert summary while loading the alert name from
         the media player. [CHAR LIMIT=NONE]
    -->
    <string name="loading_ringtone">"Loading ringtone\u2026"</string>
    <string name="app_name">"Time"</string>
    <string name="activity_worldclock">"World clock"</string>
    <string name="activity_alarm">"Alarm"</string>
    <string name="activity_Timer">"Timer"</string>
    <string name="activity_timer">"Countdown"</string>

    <!-- Timer -->
    <string name="Timer_start">"Start"</string>
    <string name="Timer_stop">"Stop"</string>
    <string name="Timer_resume">"Resume"</string>
    <string name="Timer_clean">"Clear"</string>
    <string name="Timer_record">"Lap"</string>
    <string name="Timer_absolutetime">"Total"</string>
    <string name="Timer_relativetime">"This Lap"</string>
    <string name="Timer_time_format">00 : 00 . 00</string>
    <string name="Timer_warning">"Warning"</string>
    <string name="Timer_exit_warning">"Timer is running. Do you want to quit?"</string>
    <string name="Timer_ok">@android:string/ok</string>
    <string name="Timer_cancel">@android:string/cancel</string>

    <!-- CountDown -->
    <string name="timer_choose_ring">"Ringtone"</string>
    <string name="timer_start">"Start"</string>
    <string name="timer_cancel">"Cancel"</string>
    <string name="timer_ringtone_silent">"Silent"</string>
    <string name="timer_ringtone_choose_title">"Set ringtone"</string>
    <string name="timer_exit_warning">"Countdown is running, do you want to quit?"</string>
    <string name="timer_dialog_ok">@android:string/ok</string>
    <string name="timer_dialog_cancel">@android:string/cancel</string>
    <string name="timer_alert_label">"Time up"</string>
    <string name="timer_hour">"Hour"</string>
    <string name="timer_minute">"Minute"</string>
    <string name="timer_second">"Second"</string>

    <!-- Alarm -->
    <!-- Preference category on Alarm Settings screen: Set alarm -->
    <string name="set_alarm">"Set alarm"</string>

    <!-- Menu item title for general Alarm Clock Settings -->
    <string name="settings">"Settings"</string>

    <!-- Auto silence preference title -->
    <string name="auto_silence_title">"Auto-silence"</string>

    <!-- Auto silence summary string set based on the preference value. -->
    <string name="auto_silence_summary">"Alarms will be silenced after <xliff:g id="minutes">%d</xliff:g> minutes"</string>

    <!-- Auto silence summary when turned off -->
    <string name="auto_silence_never">"OFF"</string>

    <!-- Added by xiaxia.yao for PR:413675 begin -->
    <string name="alarm_in_silent_mode_title">"Alarm in silent mode"</string>
    <string name="alarm_in_silent_mode_summary" product="default">"Play alarm even when the phone is in silent mode"</string>
    <!-- Added by xiaxia.yao for PR:413675 end -->
    
    <!--
         Entries listed in the ListPreference when invoking the auto silence
         preference.
    -->
    <string-array name="auto_silence_entries">
        <item>"Off"</item>
        <item>"5 minutes"</item>
        <item>"10 minutes"</item>
        <item>"15 minutes"</item>
        <item>"20 minutes"</item>
        <item>"25 minutes"</item>
        <item>"30 minutes"</item>
    </string-array>

    <!--
         Values that are retrieved from the ListPreference. These must match
         the auto_silence_entries above.
    -->
    <string-array name="auto_silence_values" translatable="false">
        <item>-1</item> <!-- Off -->
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string name="add_alarm">"Add alarm"</string>
    <string name="default_label">"Alarm"</string>
    <string name="never">"Never"</string>
    <string name="every_day">"every day"</string>
    <string name="day_concat">", "</string>
    <string name="alarm_settings">"Settings"</string>
    <string name="delete_alarm">"Delete alarm"</string>
    <string name="delete_alarm_confirm">"This alarm will be deleted."</string>
    <string name="snooze_duration_title">"Snooze duration"</string>
    <!-- Added by xiaxia.yao for PR:423355 -->
    <string name="delete_alarm_message">"Delete selected alarm?"</string>

    <string-array name="snooze_duration_entries">
        <item>"5 minutes"</item>
        <item>"10 minutes"</item>
        <item>"15 minutes"</item>
        <item>"20 minutes"</item>
        <item>"25 minutes"</item>
        <item>"30 minutes"</item>
    </string-array>
    <string-array name="snooze_duration_values">
        <item>"5"</item>
        <item>"10"</item>
        <item>"15"</item>
        <item>"20"</item>
        <item>"25"</item>
        <item>"30"</item>
    </string-array>

    <string name="volume_button_setting_title">"Volume buttons"</string>
    <string name="volume_button_dialog_title">"Button behavior"</string>
    <string name="volume_button_setting_summary">"Set the desired behavior of the buttons when pressed during an alarm"</string>

    <string-array name="volume_button_setting_entries">
        <item>"None"</item>
        <item>"Snooze"</item>
        <item>"Dismiss"</item>
    </string-array>
    <string-array name="volume_button_setting_values">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
    </string-array>

    <string name="turn_over_to_active_title">"Turn over to activate"</string>
    <string name="turn_over_to_active_dialog_title">"Turn over behavior"</string>
    <string name="cancel">"@android:string/cancel"</string>
    <string name="alarm_repeat">"Repeat"</string>
    <string name="alarm_vibrate">"Vibrate"</string>
    <string name="label">"Label"</string>
    <string name="day">"1 day"</string>
    <string name="days">"%s days"</string>
    <string name="hour">"1 hour"</string>
    <string name="hours">"%s hours"</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"%s minutes"</string>

    <string-array name="alarm_set">
        <item>"This alarm is set for less than 1 minute from now."</item>
        <item>"This alarm is set for %1$s from now."</item>
        <item>"This alarm is set for %2$s from now."</item>
        <item>"This alarm is set for %1$s and %2$s from now."</item>
        <item>"This alarm is set for %3$s from now."</item>
        <item>"This alarm is set for %1$s and %3$s from now."</item>
        <item>"This alarm is set for %2$s and %3$s from now."</item>
        <item>"This alarm is set for %1$s, %2$s, and %3$s from now."</item>
    </string-array>
	<!-- add by fan.yang for PR 952336 at 2015-3-25 start-->
	<string name="widget_12_hours_format" translatable="false">h:mm</string>
    <string name="widget_24_hours_format" translatable="false">kk:mm</string>
    <string name="am_pm_12_hours" translatable="false">aa</string>
    <string name="am_pm_24_hours" translatable="false"></string>
    <string name="weekday_keyguard" translatable="false">EEE</string>
    <string name="month_day_keyguard_24_hours" translatable="false">MM/dd/yyyy</string>
    <!-- add by fan.yang for PR 952336 at 2015-3-25 end-->
    <string name="silent_alarm_summary">"Silent"</string>
    <string name="alarm_notify_text">"Select to snooze or dismiss this alarm."</string>
    <string name="alarm_alert_alert_silenced">"Alarm silenced after %d minutes"</string>
    <string name="alarm_alert_snooze_text">"Snooze"</string>
    <string name="alarm_alert_dismiss_text">"Dismiss"</string> <!-- modify by liang.zhang for PR 889435 at 2015-01-04 -->
    <string name="alarm_notify_snooze_label">"%s（snoozed）"</string>
    <string name="alarm_notify_snooze_text">"Alarm set for <xliff:g id="time">%s</xliff:g>. Select to cancel."</string>
    <string name="alarm_alert_snooze_set">"Snoozing for %d minutes."</string>
    <string name="system_acticity_name">"System"</string>
    <string name="music_acticity_name">"My music"</string>
    <string name="cancle">@android:string/cancel</string>
    <string name="ok">@android:string/ok</string>
    <string name="no_music">"No music"</string>
    <string name="default_ringtone">"Default ringtone"</string>
    <!-- worldtime -->
    <string name="add_city">"Add city"</string>
    <string name="select_city">"Select city"</string>
    <string name="delete_city">"Delete"</string>
    <string name="delete_worldtime_message">"Are you sure you want to delete the Clock?"</string>
    <string name="worldtime_search_hint">"Enter city name"</string>
    <string name="sel_from_below">"Or choose from below:"</string>
    <string name="worldtime_is_showed">"(Added)"</string>
    <string name="worldtime_menu_delete">"Delete"</string>
    <string name="worldtime_delete_title">"Delete city"</string>
    <string name="worldtime_cancel">@android:string/cancel</string>
    <string name="worldtime_ok">@android:string/ok</string>
    <string name="wolrdtime_today">"Today"</string>
    <string name="wolrdtime_yestoday">"Yesterday"</string>
    <string name="wolrdtime_tomorrow">"Tomorrow"</string>
    <string name="time_am">"AM"</string>
    <string name="time_pm">"PM"</string>
    <string name="no_city">"cannot find the city"</string>

     <!-- add pr447868 xibin start  JrdTimetool与Deskclock功能整合-->
    <!-- Textual content of the button to discard the current dialog values and close the dialog -->
    <string name="time_picker_cancel">"Cancel"</string>
    <!-- Textual content of the button to update an alarm with the current dialog values -->
    <string name="time_picker_set">"OK"</string>
        <string name="night_mode_title">"Night mode"</string>
    <!-- Describes intensity of display diminuation during dream mode -->
    <string name="night_mode_summary">"Very dim display (for dark rooms)"</string>
        <!-- -->
    <!-- Label shown on launcher icon -->
    <!-- Label for the this application displayed on-screen when this application must be represented to the user. -->
    <string name="app_label">"Clock"</string>
        <!-- Header for a Clock Dream Setting referring to choosing analog or digital style -->
    <string name="clock_style">"Style"</string>
    <string name="screensaver_settings">"Dream settings"</string>
    <!-- add Pr463294 xibin screensaver clock label -->
    <string name="screensaver_clock_label">"Clock"</string>
    <!-- add pr447868 xibin end-->
    <!-- add Pr719512 XiePeng add table string -->
    <string name="alarm_in_silent_mode_summary_tablet">"Play alarm even when the tablet is in silent mode"</string>
    <!-- add pr719512 XiePeng end-->
    <string name="app_name_clock">"Clock"</string>
    <!-- add Pr718368 xiepeng DiabloXplus_KK app name -->
</resources>