<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings" >

    <!-- Added by xiaxia.yao for PR:413675 begin -->
    <CheckBoxPreference
        android:key="alarm_in_silent_mode"
        android:layout="@layout/custom_preference"
        android:summary="@string/alarm_in_silent_mode_summary"
        android:title="@string/alarm_in_silent_mode_title"
        android:widgetLayout="@layout/custom_checkbox_layout" />
    <!-- Added by xiaxia.yao for PR:413675 end -->
    <com.jrdcom.timetool.alarm.preference.ListPreference
        android:defaultValue="5"
        android:dialogTitle="@string/snooze_duration_title"
        android:entries="@array/snooze_duration_entries"
        android:entryValues="@array/snooze_duration_values"
        android:key="snooze_duration"
        android:layout="@layout/custom_preference"
        android:title="@string/snooze_duration_title" />
    <!-- FR 548923- Neo Skunkworks - Paul Xu deleted - 001 Begin -->
    <!--
    <ListPreference
        android:defaultValue="10"
        android:dialogTitle="@string/auto_silence_title"
        android:entries="@array/snooze_duration_entries"
        android:entryValues="@array/snooze_duration_values"
        android:key="auto_silence"
        android:title="@string/auto_silence_title" />
    -->
    <!-- FR 548923- Neo Skunkworks - Paul Xu deleted - 001 End -->
    <com.jrdcom.timetool.alarm.preference.ListPreference
        android:defaultValue="2"
        android:dialogTitle="@string/volume_button_dialog_title"
        android:entries="@array/volume_button_setting_entries"
        android:entryValues="@array/volume_button_setting_values"
        android:key="volume_button_setting"
        android:layout="@layout/custom_preference"
        android:summary="@string/volume_button_setting_summary"
        android:title="@string/volume_button_setting_title" />
    <!--
    PR439915-kuiwang-001 begin
    <SwitchPreference
        android:defaultValue="true"
        android:key="turn_over_preference"
        android:title="@string/turn_over_to_active_title" />
    -->
    <!-- remove by liang.zhang for PR 910288 at 2015-01-26 begin -->
    <!-- <com.jrdcom.timetool.alarm.preference.GesturesAlarmPreference
        android:defaultValue="true"
        android:key="turn_over_preference"
        android:layout="@layout/custom_preference"
        android:title="@string/turn_over_to_active_title"
        android:widgetLayout="@layout/custom_switch_layout" /> -->
    <!-- remove by liang.zhang for PR 910288 at 2015-01-26 end -->
    <!-- PR439915-kuiwang-001 end -->

</PreferenceScreen>