<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pickerlable="http://schemas.android.com/apk/res/com.android.deskclock"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr" >
	<!-- modify by liang.zhang for PR 883544 at 2015-01-07 begin -->
    <com.jrdcom.timetool.countdown.view.PickerLable
        android:id="@+id/timerpicker_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        pickerlable:lable="@string/timer_hour" />

    <com.jrdcom.timetool.countdown.view.PickerLable
        android:id="@+id/timerpicker_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        pickerlable:lable="@string/timer_minute" />

    <com.jrdcom.timetool.countdown.view.PickerLable
        android:id="@+id/timerpicker_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        pickerlable:lable="@string/timer_second" />
   	<!-- modify by liang.zhang for PR 883544 at 2015-01-07 end -->

</LinearLayout>