<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tile"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/timer_ringtone_choose_title"
        android:textColor="@color/alarm_time"
        android:textSize="22sp" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/tile"
        android:background="#2eb5fc" />

    <ListView
        android:id="@+id/music_ringtone_list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/music_ringtone_list_view_bottom"
        android:layout_below="@+id/line"
        android:divider="#cfd0d1"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector" />

    <LinearLayout
        android:id="@+id/music_ringtone_list_view_bottom"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/default_diver" />

        <LinearLayout
            android:id="@+id/btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancle_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:scaleType="center"
                android:text="@string/cancle"
                android:textColor="#000" />

            <ImageView
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:scaleType="center"
                android:text="@string/ok"
                android:textColor="#000" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>