<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/title_bar"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/bk_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/titlebar_button_bg_selector"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="-6dp"
                android:src="@drawable/back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:duplicateParentState="true"
            android:gravity="center_vertical"
            android:text="@string/worldtime_delete_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/worldtime_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:cacheColorHint="@null"
        android:divider="#cfd0d1"
        android:dividerHeight="1dp"
        android:footerDividersEnabled="true"
        android:listSelector="@drawable/list_selector"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:scaleType="fitXY"
        android:src="?android:attr/dividerHorizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/worldtime_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg_selector"
            android:focusable="true"
            android:text="@string/worldtime_cancel"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#58c4fd" />

        <Button
            android:id="@+id/worldtime_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/delete_alarm_button_bg"
            android:focusable="true"
            android:text="@string/delete_city"
            android:textColor="@color/timer_record_color"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>